Add CSS styling to index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,48 @@
 </head>
 <body>
     <div class="header">
-        <p>Header</p>
+        <div class="header-top">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-links">
+                <ul class="links">
+                    <li><a>header link one</a></li>
+                    <li><a>header link two</a></li>
+                    <li><a>header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="awesome">
+            <div class="awesome-text">
+                <div>This website is awesome</div>
+                <div>This website has some subtext that goes here under the main title. Its a smaller font and the color is lowel
+                    contrast</div>
+                <button>Sign Up</button>
+            </div>
+            <div class="placeholder">
+                <div>this is a placeholder for an image</div>
+            </div>
+        </div>
     </div>
     <div class="information">
-        <p>Some random information</p>
+        <div>Some random information.</div>
+        <div class="information-images">
+            <div class="images">
+                <div class="rounded"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="images">
+                <div class="rounded"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="images">
+                <div class="rounded"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="images">
+                <div class="rounded"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="quote">
         <p>This is an inspiring quote</p>
