--- a/index.html
+++ b/index.html
@@ -53,13 +53,23 @@
         </div>
     </div>
     <div class="quote">
-        <p>This is an inspiring quote</p>
+        <div class="inspire">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
+            is that it looks nice.</div>
+        <div class="thor">-Thor, God of Thunder</div>
     </div>
-    <div class="action">
-        <p>Call to action</p>
+    <div class="action-section">
+        <div class="action">
+            <div class="action-content">
+                <div>Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there</div>
+            </div>
+            <div>
+                <button>Sign Up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">
-        <p>Footer</p>
+        <div>Copyright © The Odin Project 2021</div>
     </div>
 </body>
 </html>
