Add font and color styling to index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
         <div class="awesome">
             <div class="awesome-text">
-                <div>This website is awesome</div>
-                <div>This website has some subtext that goes here under the main title. Its a smaller font and the color is lowel
+                <div class="this-website">This website is awesome</div>
+                <div class="subtext">This website has some subtext that goes here under the main title. Its a smaller font and the color is lowel
                     contrast</div>
                 <button>Sign Up</button>
             </div>
@@ -32,23 +32,23 @@
         </div>
     </div>
     <div class="information">
-        <div>Some random information.</div>
+        <div class="information-top">Some random information.</div>
         <div class="information-images">
             <div class="images">
                 <div class="rounded"></div>
-                <div>this is some subtext under an illustration or image</div>
+                <div class="rounded-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="images">
                 <div class="rounded"></div>
-                <div>this is some subtext under an illustration or image</div>
+                <div class="rounded-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="images">
                 <div class="rounded"></div>
-                <div>this is some subtext under an illustration or image</div>
+                <div class="rounded-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="images">
                 <div class="rounded"></div>
-                <div>this is some subtext under an illustration or image</div>
+                <div class="rounded-text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
@@ -60,11 +60,11 @@
     <div class="action-section">
         <div class="action">
             <div class="action-content">
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there</div>
+                <div class="call">Call to action! It's time!</div>
+                <div class="product">Sign up for our product by clicking that button right over there</div>
             </div>
             <div>
-                <button>Sign Up</button>
+                <button class="action-button">Sign Up</button>
             </div>
         </div>
     </div>
