--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
 <body>
     <div class="header">
         <div class="header-top">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">Rydrix & Bell Corporation</div>
             <div class="header-links">
                 <ul class="links">
-                    <li><a>header link one</a></li>
-                    <li><a>header link two</a></li>
-                    <li><a>header link three</a></li>
+                    <li><a>Home</a></li>
+                    <li><a>Mission</a></li>
+                    <li><a>Contact</a></li>
                 </ul>
             </div>
         </div>
         <div class="awesome">
             <div class="awesome-text">
-                <div class="this-website">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes here under the main title. Its a smaller font and the color is lowel
-                    contrast</div>
-                <button>Sign Up</button>
+                <div class="this-website">Investing in a greener future</div>
+                <div class="subtext">We have been helping qualified patients access holistic health since 2015</div>
+                <button>Learn More</button>
             </div>
             <div class="placeholder">
                 <div>this is a placeholder for an image</div>
@@ -35,44 +34,44 @@
         </div>
     </div>
     <div class="information">
-        <div class="information-top">Some random information.</div>
+        <div class="information-top">Our Services</div>
         <div class="information-images">
             <div class="images">
                 <div class="rounded"></div>
-                <div class="rounded-text">this is some subtext under an illustration or image</div>
+                <div class="rounded-text">Management</div>
             </div>
             <div class="images">
                 <div class="rounded"></div>
-                <div class="rounded-text">this is some subtext under an illustration or image</div>
+                <div class="rounded-text">Accounting</div>
             </div>
             <div class="images">
                 <div class="rounded"></div>
-                <div class="rounded-text">this is some subtext under an illustration or image</div>
+                <div class="rounded-text">Patients
+                </div>
             </div>
             <div class="images">
                 <div class="rounded"></div>
-                <div class="rounded-text">this is some subtext under an illustration or image</div>
+                <div class="rounded-text">Members</div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <div class="inspire">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
-            is that it looks nice.</div>
-        <div class="thor">-Thor, God of Thunder</div>
+        <div class="inspire">"The greatness of a man is not in how much wealth he acquires, but in his integrity and his ability to affect those around him positively".</div>
+        <div class="thor">-Bob Marley</div>
     </div>
     <div class="action-section">
         <div class="action">
             <div class="action-content">
-                <div class="call">Call to action! It's time!</div>
-                <div class="product">Sign up for our product by clicking that button right over there</div>
+                <div class="call">Join our vision!</div>
+                <div class="product">Please contact us for more information about opportunities</div>
             </div>
             <div>
-                <button class="action-button">Sign Up</button>
+                <button class="action-button">Contact</button>
             </div>
         </div>
     </div>
     <div class="footer">
-        <div>Copyright © The Odin Project 2021</div>
+        <div>Copyright © Rydrix & Bell Corporation 2015</div>
     </div>
-</body>
+</bod>
 </html>
